--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.16.3",
+    "http": "0.0.0",
+    "https": "^1.0.0",
+    "querystring": "^0.2.0",
     "superagent": "^3.8.2"
   }
 }
